pkl-core/src/test/files/LanguageSnippetTests/input/errors/refusingToLoadModule.pkl
import "birds:///foo.pkl"

output = foo
